--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Carlos R Herrera</h1>
-									<p>Tech Lead Developer </p>
+									<p>Tech Lead / Full Stack Developer </p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
