--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carlos R H - Full Stack Developer</title>
+    <title>Megan L Palliayiah </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -44,8 +44,8 @@
                     CR
                 </div>
                 <div class="text-center md:text-left">
-                    <h1 class="text-4xl font-bold text-gray-800">Carlos R H</h1>
-                    <h2 class="text-2xl text-indigo-600 font-medium mt-2">Full Stack Developer & Database Specialist</h2>
+                    <h1 class="text-4xl font-bold text-gray-800">Megan L Palliayiah</h1>
+                    <h2 class="text-2xl text-indigo-600 font-medium mt-2">Project Management and Service Delivery Specialist</h2>
                     <div class="flex justify-center md:justify-start space-x-4 mt-4">
                         <a href="#" class="text-gray-600 hover:text-indigo-600">
                             <i class="fab fa-github fa-lg"></i>
