--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                         <a href="#" class="text-gray-600 hover:text-indigo-600">
                             <i class="fab fa-github fa-lg"></i>
                         </a>
-                        <a href="#" class="text-gray-600 hover:text-indigo-600">
+                        <a href="linkedin.com/in/megan-palliayiah" class="text-gray-600 hover:text-indigo-600">
                             <i class="fab fa-linkedin fa-lg"></i>
                         </a>
                         <a href="#" class="text-gray-600 hover:text-indigo-600">
                             <i class="fab fa-twitter fa-lg"></i>
                         </a>
-                        <a href="#" class="text-gray-600 hover:text-indigo-600">
+                        <a href="meganpalliayiah@gmail.com" class="text-gray-600 hover:text-indigo-600">
                             <i class="fas fa-envelope fa-lg"></i>
                         </a>
                     </div>
@@ -74,9 +74,7 @@
                         <i class="fas fa-user mr-2 text-indigo-600"></i> About Me
                     </h2>
                     <p class="text-gray-600 leading-relaxed">
-                        Passionate full stack developer with expertise in both frontend and backend technologies. 
-                        Specialized in database architecture and management with a strong focus on performance 
-                        optimization and data integrity. Committed to writing clean, efficient, and maintainable code.
+                        I'm a passionate and results-driven Project Manager with a deep love for the tech and engineering world. With a strong focus on execution, I thrive on turning ideas into action and ensuring every detail aligns with the bigger picture. I bring energy, structure, and a hands-on approach to every project, driven by a commitment to delivering high-quality outcomes and empowering teams to do their best work.
                     </p>
                 </section>
 
@@ -88,11 +86,11 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <!-- Frontend Skills -->
                         <div>
-                            <h3 class="text-lg font-semibold text-gray-700 mb-3">Frontend Development</h3>
+                            <h3 class="text-lg font-semibold text-gray-700 mb-3">My Ability</h3>
                             <div class="space-y-4">
                                 <div>
                                     <div class="flex justify-between mb-1">
-                                        <span class="text-sm font-medium text-gray-700">HTML/CSS</span>
+                                        <span class="text-sm font-medium text-gray-700">Project Management Tools</span>
                                         <span class="text-sm font-medium text-gray-500">95%</span>
                                     </div>
                                     <div class="skill-bar">
@@ -101,7 +99,7 @@
                                 </div>
                                 <div>
                                     <div class="flex justify-between mb-1">
-                                        <span class="text-sm font-medium text-gray-700">JavaScript</span>
+                                        <span class="text-sm font-medium text-gray-700">Agile & Scrum Methodologies</span>
                                         <span class="text-sm font-medium text-gray-500">90%</span>
                                     </div>
                                     <div class="skill-bar">
@@ -110,7 +108,7 @@
                                 </div>
                                 <div>
                                     <div class="flex justify-between mb-1">
-                                        <span class="text-sm font-medium text-gray-700">React</span>
+                                        <span class="text-sm font-medium text-gray-700">Data Analysis & Reporting</span>
                                         <span class="text-sm font-medium text-gray-500">85%</span>
                                     </div>
                                     <div class="skill-bar">
@@ -122,11 +120,11 @@
 
                         <!-- Backend & Database Skills -->
                         <div>
-                            <h3 class="text-lg font-semibold text-gray-700 mb-3">Backend & Database</h3>
+                            <h3 class="text-lg font-semibold text-gray-700 mb-3"></h3>
                             <div class="space-y-4">
                                 <div>
                                     <div class="flex justify-between mb-1">
-                                        <span class="text-sm font-medium text-gray-700">Node.js</span>
+                                        <span class="text-sm font-medium text-gray-700">Risk Management</span>
                                         <span class="text-sm font-medium text-gray-500">88%</span>
                                     </div>
                                     <div class="skill-bar">
@@ -135,7 +133,7 @@
                                 </div>
                                 <div>
                                     <div class="flex justify-between mb-1">
-                                        <span class="text-sm font-medium text-gray-700">SQL</span>
+                                        <span class="text-sm font-medium text-gray-700">Technical Understanding</span>
                                         <span class="text-sm font-medium text-gray-500">92%</span>
                                     </div>
                                     <div class="skill-bar">
@@ -144,7 +142,7 @@
                                 </div>
                                 <div>
                                     <div class="flex justify-between mb-1">
-                                        <span class="text-sm font-medium text-gray-700">MongoDB</span>
+                                        <span class="text-sm font-medium text-gray-700">Budgeting & Resource Management</span>
                                         <span class="text-sm font-medium text-gray-500">85%</span>
                                     </div>
                                     <div class="skill-bar">
@@ -162,9 +160,9 @@
                         <h2 class="text-2xl font-bold text-gray-800 flex items-center">
                             <i class="fas fa-project-diagram mr-2 text-indigo-600"></i> My Projects
                         </h2>
-                        <button id="addProjectBtn" class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition flex items-center floating-btn">
+                        <!-- <button id="addProjectBtn" class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition flex items-center floating-btn">
                             <i class="fas fa-plus mr-2"></i> Add Project
-                        </button>
+                        </button> -->
                     </div>
 
                     <!-- Project Cards Container -->
@@ -183,19 +181,23 @@
                     </h2>
                     <div class="space-y-6">
                         <div>
-                            <h3 class="text-lg font-semibold text-gray-800">Senior Full Stack Developer</h3>
-                            <p class="text-indigo-600 text-sm">Tech Solutions Inc. • 2020 - Present</p>
+                            <h3 class="text-lg font-semibold text-gray-800">Project Administrator</h3>
+                            <p class="text-indigo-600 text-sm">Geeks4Learning. • 2020 - Present</p>
                             <p class="text-gray-600 text-sm mt-2">
-                                Led a team of developers to build scalable web applications with React and Node.js.
-                                Designed and optimized complex database schemas for high-traffic applications.
+                                As an experienced Project Administrator, I excel in coordinating and managing projects with precision and efficiency. Proficient in MS Project, I am skilled in planning, tracking, and ensuring projects remain on schedule and within budget. My expertise includes designing well-structured document frameworks in SharePoint, enabling seamless collaboration and easy access to information. Additionally, I specialize in visually mapping business processes through diagrams, providing clear insights to enhance workflows and address inefficiencies.
+
+I have supported project managers by coordinating tasks, tracking progress, maintaining accurate records, and ensuring smooth communication between stakeholders. I successfully led a Learning Management System (LMS) migration, enhancing functionality and user experience through detailed documentation and strategic implementation. Furthermore, I standardized SharePoint structures across departments, improving document management efficiency by 25%.
+
+Driven by a passion for delivering successful projects and optimizing processes, I leverage my diverse skill set to achieve impactful results and contribute to organizational success.
                             </p>
                         </div>
                         <div>
-                            <h3 class="text-lg font-semibold text-gray-800">Database Administrator</h3>
-                            <p class="text-indigo-600 text-sm">Data Systems Corp. • 2017 - 2020</p>
+                            <h3 class="text-lg font-semibold text-gray-800">jnr Estimator</h3>
+                            <p class="text-indigo-600 text-sm">MacNeil Pty LTD · Full-time. • Aug 2017 - Nov 2018 · 1 yr 4 mosAug 2017 to Nov 2018 · 1 yr 4 mos</p> 
                             <p class="text-gray-600 text-sm mt-2">
-                                Managed large-scale SQL and NoSQL databases. Implemented backup strategies and 
-                                performance tuning that reduced query times by 40%.
+                                I worked as a Junior Estimator with one year of experience in the construction and manufacturing industry. Efficient in cost estimation and budgeting, I had a strong analytical mindset to every project.
+Additionally, my skills extended to creating detailed technical drawings of the company's sanitaryware products, contributing to precise project planning and execution. 
+I'm passionate about enhancing project efficiency and accuracy through my combined expertise in estimation and technical design.
                             </p>
                         </div>
                     </div>
@@ -207,13 +209,27 @@
                         <i class="fas fa-graduation-cap mr-2 text-indigo-600"></i> Education
                     </h2>
                     <div>
-                        <h3 class="text-lg font-semibold text-gray-800">MSc in Computer Science</h3>
-                        <p class="text-indigo-600 text-sm">University of Technology • 2015 - 2017</p>
-                        <p class="text-gray-600 text-sm mt-2">
-                            Specialized in Database Systems and Web Technologies. Thesis on "Optimizing NoSQL 
-                            Databases for Real-time Applications".
+                        <h3 class="text-lg font-semibold text-gray-800">Geeks 4 Learning Training </h3>
+                        <p class="text-indigo-600 text-sm">Certificate , Business AnalysisCertificate , Business Analysis • Jun 2022 - Jun 2023</p>
+                        <p class="text-gray-600 text-sm mt-2"> 
+                            I recently embarked on a comprehensive Business Analysis learnership program at Geeks4Learning. 
+                            Through this invaluable experience, I gained hands-on insights into real-world project scenarios, honing my skills in agile methodologies, requirements gathering, stakeholder communication, 
+                            and problem-solving.
+                            During my learnership, I'm proud to share that I successfully completed the BCS (British Computer Society) certification in Business Analysis, 
+                            solidifying my knowledge in business analysis methodologies and best practices. This learnership has not only expanded my theoretical understanding but also equipped me with practical skills, 
+                            enabling me to analyze complex business processes and provide valuable insights for decision-making.
                         </p>
-                    </div>
+                    </div>  
+                    
+                    <div>
+                        <h3 class="text-lg font-semibold text-gray-800">CTU Training Solutions </h3>
+                        <p class="text-indigo-600 text-sm">Project Management PMB • 2019 - 2020</p>
+                        <p class="text-gray-600 text-sm mt-2"> 
+                            Proud to have earned my National Certification in Project Management at CTU Training Solutions, it helped me establish a fundamental understanding of project management, 
+                            equipping me with essential knowledge and skills as a stepping stone for developing more advanced project management competencies. 
+                            This qualification empowered me to formulate strategies and apply effective techniques and processes in project management.
+                        </p>
+                    </div>  
                 </section>
 
                 <!-- Contact Section -->
@@ -228,11 +244,11 @@
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-envelope text-indigo-600 mr-3"></i>
-                            <span class="text-gray-600">carlos@example.com</span>
+                            <span class="text-gray-600">Meganpalliayiah@gmail.com</span>
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-map-marker-alt text-indigo-600 mr-3"></i>
-                            <span class="text-gray-600">San Francisco, CA</span>
+                            <span class="text-gray-600">Johannesburg, GA </span>
                         </div>
                     </div>
                 </section>
@@ -244,10 +260,10 @@
     <div id="projectModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
         <div class="bg-white rounded-xl p-6 w-full max-w-md">
             <div class="flex justify-between items-center mb-4">
-                <h3 class="text-xl font-bold text-gray-800">Add New Project</h3>
+                <!-- <h3 class="text-xl font-bold text-gray-800">Add New Project</h3>
                 <button id="closeModalBtn" class="text-gray-500 hover:text-gray-700">
                     <i class="fas fa-times"></i>
-                </button>
+                </button>-->
             </div>
             <form id="projectForm" class="space-y-4">
                 <div>
@@ -287,15 +303,15 @@
             // Sample projects data
             let projects = [
                 {
-                    title: "E-commerce Platform",
-                    description: "Built a full-featured e-commerce platform with React frontend and Node.js backend. Integrated with Stripe for payments.",
-                    technologies: "React, Node.js, MongoDB, Stripe",
+                    title: "LMS Platform",
+                    description: "Managed a Team of skilled individuals to build an LMS fine tune it to the needs of Geeks4Learning.",
+                    technologies: "Trello, Excel, PHP, Js",
                     link: "#"
                 },
                 {
-                    title: "Data Analytics Dashboard",
-                    description: "Created a real-time analytics dashboard that processes millions of data points daily. Optimized queries for fast performance.",
-                    technologies: "React, D3.js, PostgreSQL, Python",
+                    title: "The Geek Front",
+                    description: "Coordinated and set up and Event Called a LAN and collected Sponsoships for the event allowing the even to proceed without a hitch made sure that users that appeared had booked for the evern and had their access.",
+                    technologies: "Networking Skills, Team management, Ticket logging, event prizes",
                     link: "#"
                 }
             ];
