--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <header class="bg-white rounded-xl shadow-md p-6 mb-8">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="w-32 h-32 rounded-full bg-gradient-to-r from-blue-500 to-indigo-600 flex items-center justify-center text-white text-5xl font-bold mb-4 md:mb-0 md:mr-6">
-                    CR
+                    MLP
                 </div>
                 <div class="text-center md:text-left">
                     <h1 class="text-4xl font-bold text-gray-800">Megan L Palliayiah</h1>
